tiny formatting update

--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,10 @@ footskip=0.95cm]{geometry} %% Margin sizes intended for digital view,  add more 
     \tableofcontents
     \newpage
 
+    %% More settings (text formatting only)
+    \raggedright
+    \setlength{\parindent}{20pt}
+
     \input{parts/Introduction.tex}
     \input{parts/Overall_description.tex}
     \input{parts/System_features.tex}
